added distribution management in pom file:2

--- a/pom.xml
+++ b/pom.xml
@@ -65,10 +65,11 @@
   </build>
 
       <distributionManagement>
-        <id>maven-snapshots</id>
-        <name>maven-snapshots</name>
-        <url>http://nexus.dot-cdp.de/#browse/browse:maven-snapshots</url>
-
+        <snapshotRepository>
+          <id>maven-snapshots</id>
+          <name>maven-snapshots</name>
+          <url>http://nexus.dot-cdp.de/#browse/browse:maven-snapshots</url>
+        </snapshotRepository>
       </distributionManagement>
 
 
